--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,7 +12,18 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-bootstrap": "^1.0.0-beta.17"
+    "react-bootstrap": "^1.0.0-beta.17",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "crypto-js": "^3.1.9-1",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "handlebars": "^4.0.12",
+    "hbs": "^4.0.6",
+    "jsonwebtoken": "^8.4.0",
+    "mongodb": "^3.3.4",
+    "mongoose": "^5.7.12",
+    "validator": "^10.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
