--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,14 +8,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "react-bootstrap": "^1.0.0-beta.17",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "handlebars": "^4.0.12",
@@ -23,6 +20,11 @@
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.12",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
     "validator": "^10.11.0"
   },
   "scripts": {
