--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^7.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.4.2",
+    "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^8.2.0",
