--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "12.16.x",
-    "npm": "6.13.x"
+    "node": "12.16.x"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.5",
