--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "main": "server.js",
   "engines": {
     "node": "12.16.x",
     "npm": "6.13.x"
