--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,10 @@
     "description": "",
     "private": true,
     "scripts": {
-      "setup": "npm install && cd client && npm install && cd ..",
-      "build-run": "cd client && npm run build && cd .. && node server.js",
-      "start": "node server.js",
-      "heroku-postbuild": "cd client && npm install && npm run build",
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
     },
     "dependencies": {
       "@material-ui/core": "^4.9.5",
